--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "vue-tsc --noEmit && eslint --ext .ts,.vue --fix .",
+    "start": "npm run dev"
   },
   "dependencies": {
     "vue": "^3.4.37"
